# 1071_MultiRepo_Rele-Tools

./: .gitmodules  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: sync-tool-submodule.yml
.streamlit/: config.toml
app_pages/: home.py  tool_1049_pdf_extraktor.py  tool_1052_buchungsimporteur.py  tool_1067_relelisten_extraktor.py
src/dashboard/: __init__.py  state.py  ui.py  upload_validation.py
src/dashboard/integrations/: __init__.py  base.py  tool_1049_adapter.py  tool_1052_adapter.py  tool_1067_adapter.py
tests/unit/: test_integrations_smoke.py  test_state.py  test_upload_validation.py
