[project]
name = "1071-multirepo-rele-tools"
version = "0.1.0"
description = "Streamlit dashboard fuer die RELE Toolkette"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.0",
    "pypdf>=6.10.0",
    "streamlit>=1.56.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "types-openpyxl>=3.1.5.20250602",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["tools"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["^tools/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
